<resources>
    <string name="app_name">SavLife</string>
    <string name="save_lives_ndonate_blood">Save lives.\nDonate blood.</string>
    <string name="mobile_number">Mobile number</string>
    <string name="login">Login</string>
    <string name="fullname">Fullname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="register">Register</string>
    <string name="no_internet_available">No Internet available</string>
    <string name="please_Watit">Please wait..</string>
    <string name="oops">OOPS!!</string>
    <string name="dont_worry_engineers_r_working">Woops!! Something went wrong But don\'t worry our engineers are working on it.</string>
    <string name="report_issue">Report issue</string>
    <string name="try_again">Try again</string>
    <string name="did_t_got_otp">Did\'t got OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="otp_has_been_send_to">OTP Has Been Send To</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="need_help_contact_us">Need Help? Contact Us.</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search">Search</string>
    <string name="retry">retry</string>
    <string name="ok">ok</string>
    <string name="book_deal">Book Deal</string>
    <string name="contact">Contact</string>
    <string name="photo">photo</string>
    <string name="status">status</string>
    <string name="enter_status">Enter Status</string>
    <string name="post_status">Post status</string>
    <string name="post">post</string>
    <string name="cancel">cancel</string>
    <string-array name="blood_group_name">
        <item>O-</item>
        <item>O+</item>
        <item>A-</item>
        <item>A+</item>
        <item>B-</item>
        <item>B+</item>
        <item>AB-</item>
        <item>AB+</item>
        <item>HH</item>
    </string-array>
    <string-array name="location_array">
        <item>Bhopal</item>
        <item>Indore</item>
        <item>Hydrabaad</item>
        <item>Mumbai</item>


    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="add_last_donation">Add last donation</string>
    <string name="about">About</string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="mobile_no">Mobile No</string>
    <string name="last_donated_on">Last Donated On</string>
    <string name="id">Id</string>
    <string name="city">City</string>
    <string name="gender">Gender</string>
</resources>
