<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OtpVerificationActivity">

    <include
        layout="@layout/include_toolbar"
        android:id="@+id/toolbar"/>

    <TextView
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:id="@+id/verify_otp_heading"
        android:textColor="@color/colorAccent"
        style="@style/Base.TextAppearance.AppCompat.Headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OTP Has Been Send To 8962239913"
        android:layout_below="@+id/verify_otp_heading"
        android:textColor="@color/colorAccent"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/nuberTextview"
        android:layout_marginBottom="10dp"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/nuberTextview"
        android:id="@+id/edit_input">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp"
            android:id="@+id/verify_EditText"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_input"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:id="@+id/verify_Button"
        android:text="@string/verify"
        android:background="@drawable/primary_red_button_round"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_Button"
        android:id="@+id/otp_progressbar"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        style="?android:attr/progressBarStyleHorizontal"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/otp_progressbar"
        android:id="@+id/otp_progress_percentage"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_t_got_otp"
        android:id="@+id/resend_otp_heading"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:textColor="@color/colorAccent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_otp"
        android:id="@+id/resend_otp_btn"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_below="@+id/resend_otp_heading"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>
