<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/profile_layout_for_snackbar"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/include_toolbar" android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.hackerkernel.blooddonar.activity.ProfileInfoActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/profile_imageView"
                android:src="@drawable/placeholder_300_300"
                android:scaleType="centerCrop"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:id="@+id/view1"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"

                android:layout_marginLeft="10dp"
                android:layout_below="@+id/profile_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_below="@id/profile_imageView"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_dark"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/profile_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/blood_group"
                android:textColor="@color/primary_dark"
                android:layout_below="@+id/profile_imageView"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/profile_blood_grup"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:id="@+id/view2"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:layout_below="@+id/profile_last_donated"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:layout_below="@+id/profile_name"
                android:layout_marginTop="20dp"
                android:textColor="@color/primary_dark"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:id="@+id/mobile_num"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobile_num"
                android:id="@+id/profile_Num"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_blood_grup"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/last_donated_on"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/last_donated"
                android:textColor="@color/primary_dark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_donated"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:id="@+id/profile_last_donated"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:layout_below="@+id/profile_last_donated"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/id"
                android:textColor="@color/primary_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/id"
                android:id="@+id/profile_id"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider"
                android:id="@+id/view3"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/profile_id"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_last_donated"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/age"
                android:text="@string/age"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/primary_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_age"
                android:layout_below="@id/age"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/city"
                android:layout_below="@+id/profile_id"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/city"
                android:textColor="@color/primary_dark"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_city"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@id/city" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/profile_age"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:text="@string/gender"
                android:textColor="@color/primary_dark"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_gender"
                android:layout_below="@id/gender"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:paddingBottom="20dp"
                />

        </RelativeLayout>








    </ScrollView>
</LinearLayout>

